applications/love-letter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: love-letter-service
  labels:
    app: love-letter
spec:
  selector:
    app: love-letter
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
