applications/love-letter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: love-letter-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - love-letter.chriszhu.me
    secretName: love-letter-tls
  rules:
  - host: love-letter.chriszhu.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: love-letter-service
            port:
              number: 80
